文件移动完成

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /.gitignore
 /ActionRoguelike.sln
 /Saved/Logs/ActionRoguelike.log
+/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+/.gitignore
+/.gitignore
