--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,7 +80,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PrimaryAttack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="SecondaryAttack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="PrimaryInteract",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="PrimaryInteract",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
