🎯Add AICharacter RangedAttackk Task

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,3 +16,6 @@ ManualIPAddress=
 EditorStartupMap=/Game/ActionRoguelike/Maps/BaseMap.BaseMap
 GameDefaultMap=/Game/ActionRoguelike/Maps/BaseMap.BaseMap
 
+[/Script/AIModule.AISystem]
+bAllowControllersAsEQSQuerier=False
+
